fix white flash of content on dark mode

--- a/styles/application.scss
+++ b/styles/application.scss
@@ -9,6 +9,7 @@ html {
   font-size: 1rem;
   font-size: min(max(0.95rem, 1.5vw), 1.2rem);
   height: 100%;
+  background-color: #111;
 }
 
 body {
